addons/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
spec:
  selector:
    app.kubernetes.io/name: keycloak
  ports:
    # Only Traefik uses this Service (Track I.1): browser and in-cluster clients both reach
    # http://keycloak.localhost through the ingress on port 80.
    - name: http
      port: 8080
      targetPort: http
