addons/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    link.argocd.argoproj.io/external-link: "http://keycloak.localhost:8080/admin/master/console/"
spec:
  ingressClassName: traefik
  rules:
    - host: keycloak.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
